# Kolik

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Kolik/: CMakeLists.txt  Options.h  main.cpp  main.h
Kolik/command/: help.cpp  help.h  test.cpp  test.h
Kolik/process/: process.cpp  process.h
Kolik/save/: save.cpp  save.h
